--- a/app/src/main/res/layout/homepage_logopedista.xml
+++ b/app/src/main/res/layout/homepage_logopedista.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context=".HomePageLogopedista">
 
-    <Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/MyToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
