--- a/app/src/main/res/layout/homepage_logopedista.xml
+++ b/app/src/main/res/layout/homepage_logopedista.xml
@@ -17,10 +17,9 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <FrameLayout
-        android:id="@+id/homepage_logopedista_fragment"
-
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
