--- a/app/src/main/res/layout/fragment_home_page_logopedista.xml
+++ b/app/src/main/res/layout/fragment_home_page_logopedista.xml
@@ -110,7 +110,7 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/paziente"
+                    android:src="@drawable/baseline_assignment_24"
                     android:layout_gravity="center_horizontal"/>
 
                 <TextView
