--- a/app/src/main/res/layout/fragment_home_page_logopedista.xml
+++ b/app/src/main/res/layout/fragment_home_page_logopedista.xml
@@ -101,6 +101,15 @@
             app:cardElevation="12dp"
             app:cardBackgroundColor="@color/blu_oltremare">
 
+            <Button
+                android:id="@+id/btnOpenExerciseList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:gravity="center"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -110,7 +119,7 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/baseline_assignment_24"
+                    android:src="@drawable/esercizi"
                     android:layout_gravity="center_horizontal"/>
 
                 <TextView
