--- a/app/src/main/res/layout/homepage_logopedista.xml
+++ b/app/src/main/res/layout/homepage_logopedista.xml
@@ -16,6 +16,18 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+    <fragment
+        android:id="@+id/nav_graph"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintTop_toBottomOf="@id/MyToolbar"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:navGraph="@navigation/nav_graph" />
+
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
