--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,14 +22,14 @@
         tools:layout="@layout/fragment_appuntamenti_logopedista" >
 
         <action
-            android:id="@+id/action_fragment_appuntamenti_logopedista_to_newAppointmentActivity"
-            app:destination="@id/newAppointment" />
+            android:id="@+id/action_fragment_appuntamenti_logopedista_to_NewAppointmentActivity"
+            app:destination="@id/NewAppointment" />
         <action
             android:id="@+id/action_fragment_appuntamenti_logopedista_to_homepage_logopedista_fragment"
             app:destination="@id/homepage_logopedista_fragment" />
     </fragment>
     <activity
-        android:id="@+id/newAppointment"
+        android:id="@+id/NewAppointment"
         android:name="it.uniba.dib.sms2324_16.NewAppointmentActivity"
         android:label="inserimento_appuntamenti"
         tools:layout="@layout/inserimento_appuntamenti" />
