--- a/app/src/main/res/drawable/custom_button_background.xml
+++ b/app/src/main/res/drawable/custom_button_background.xml
@@ -3,7 +3,7 @@
     <!-- Stato quando il pulsante è premuto -->
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/blu_oltremare_pressed" />
+            <solid android:color="@color/blu_oltremare" />
             <corners android:radius="20dp" />
         </shape>
     </item>
