--- a/app/src/main/res/layout/fragment_appuntamenti_logopedista.xml
+++ b/app/src/main/res/layout/fragment_appuntamenti_logopedista.xml
@@ -57,7 +57,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
 
-            android:background="#1C3144"
+            android:background="@color/magenta_sbiadito"
             android:text="Modifica" />
 
         <ImageView
