--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -33,7 +33,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:backgroundTint="@drawable/custom_button_background"
+            android:backgroundTint="@color/blu_oltremare"
             android:clickable="true"
             android:textColor="@android:color/white"/>
 
@@ -46,7 +46,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
-            android:backgroundTint="@drawable/custom_button_background"
+            android:backgroundTint="@color/blu_oltremare"
             android:clickable="true"
             android:textColor="@android:color/white"/>
     </LinearLayout>
