Ho aggiunto login e registrazione del genitore

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="verdeacqua_sbiadito">#61A0AF</color>
     <color name="gray">#9C9C9C</color>
     <color name="red">#FF0000</color>
+    <color name="marrone_arancio">#A65E2E</color>
 </resources>
