--- a/app/src/main/res/layout/dettagli_appuntamenti.xml
+++ b/app/src/main/res/layout/dettagli_appuntamenti.xml
@@ -30,10 +30,10 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/oraTextView"
+        android:id="@+id/genitoreTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ora: "
+        android:text="Genitore: "
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -41,5 +41,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/oraTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ora: "
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/genitoreTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
 
