--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -14,4 +14,5 @@
     <item name="recyclerViewAssign" type="id" />
     <item name="recyclerViewAssign2" type="id" />
     <item name="assignButton" type="id" />
+    <item name="figlioTextView" type="id" />
 </resources>
