--- a/app/src/main/res/layout/appuntamenti_genitore_dettagli.xml
+++ b/app/src/main/res/layout/appuntamenti_genitore_dettagli.xml
@@ -6,18 +6,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="MissingDefaultResource">
 
-    <TextView
-        android:id="@+id/oraTextView"
-        android:layout_width="wrap_content"
+    <!-- Aggiunto Spinner con ID spinnerAppointments -->
+    <Spinner
+        android:id="@+id/spinnerAppointments"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Ora: "
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id = "@+id/nome_figlio_Genitore_TextView"
+        android:id="@+id/oraTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ora: "
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerAppointments"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/nome_figlio_Genitore_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nome Figlio: "
@@ -26,5 +36,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
