--- a/app/src/main/res/layout/fragment_home_page_genitore.xml
+++ b/app/src/main/res/layout/fragment_home_page_genitore.xml
@@ -56,7 +56,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardPazienti"
+            android:id="@+id/cardScenario"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_columnWeight="1"
