--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="gray">#9C9C9C</color>
     <color name="red">#FF0000</color>
     <color name="marrone_arancio">#A65E2E</color>
+    <color name="coloreDiSfondoPulsante" />
 </resources>
