scelta personaggi più scrittura database

--- a/app/src/main/res/layout/scelta_personaggio_savana.xml
+++ b/app/src/main/res/layout/scelta_personaggio_savana.xml
@@ -1,74 +1,82 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pesca">
+    android:background="#b5e2ff"
+    tools:context=".SceltaPersonaggioSavana">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imageView4"
+        android:layout_width="410dp"
+        android:layout_height="265dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/scenario_savana"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/button"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/personaggio_savana_leone"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView4"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/button2"
+        android:id="@+id/button1"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/personaggio_savana_leopardo"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="256dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintStart_toEndOf="@id/button"
+        app:layout_constraintTop_toTopOf="@id/button"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/button3"
+        android:id="@+id/button2"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/personaggio_savana_scimmia"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="256dp"
-        tools:layout_editor_absoluteY="564dp" />
+        app:layout_constraintStart_toStartOf="@id/button"
+        app:layout_constraintTop_toBottomOf="@id/button1"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/button4"
+        android:id="@+id/button3"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/personaggio_savana_elefante"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="564dp" />
+        app:layout_constraintStart_toEndOf="@id/button2"
+        app:layout_constraintTop_toTopOf="@id/button2"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
