--- a/app/src/main/res/layout/scelta_personaggio_fatato.xml
+++ b/app/src/main/res/layout/scelta_personaggio_fatato.xml
@@ -4,70 +4,79 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#b5e2ff">
+    android:background="#b5e2ff"
+    tools:context=".SceltaPersonaggioMondoIncantato">
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="410dp"
+        android:layout_height="265dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/scenario_fatato"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="46dp"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/button"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/personaggio_fatato_1"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="27dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView4"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/button1"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/personaggio_fatato_2"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="234dp"
-        tools:layout_editor_absoluteY="26dp" />
+        app:layout_constraintStart_toEndOf="@id/button"
+        app:layout_constraintTop_toTopOf="@id/button"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/button2"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/personaggio_fatato_3"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="518dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/button3"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/personaggio_fatato_4"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="234dp"
-        tools:layout_editor_absoluteY="517dp" />
+        app:layout_constraintStart_toEndOf="@id/button2"
+        app:layout_constraintTop_toTopOf="@id/button2"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
