--- a/app/src/main/res/layout/scelta_personaggio_piratesco.xml
+++ b/app/src/main/res/layout/scelta_personaggio_piratesco.xml
@@ -1,77 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#6AC5fe"
-    >
-
+    android:background="#b5e2ff"
+    tools:context=".SceltaPersonaggioPiratesco">
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="482dp"
-        android:layout_height="464dp"
+        android:id="@+id/imageView4"
+        android:layout_width="410dp"
+        android:layout_height="265dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/scenario_piratesco"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-36dp"
-        tools:layout_editor_absoluteY="97dp" />
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/button"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/personaggio_pirata_1"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="7dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView4"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/button2"
+        android:id="@+id/button1"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/personaggio_pirata_2"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="241dp"
-        tools:layout_editor_absoluteY="7dp" />
+        app:layout_constraintStart_toEndOf="@id/button"
+        app:layout_constraintTop_toTopOf="@id/button"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/button3"
+        android:id="@+id/button2"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/personaggio_pirata_3"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="576dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/button4"
+        android:id="@+id/button3"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/personaggio_pirata_4"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="241dp"
-        tools:layout_editor_absoluteY="576dp" />
-
+        app:layout_constraintStart_toEndOf="@id/button2"
+        app:layout_constraintTop_toTopOf="@id/button2"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
