--- a/app/src/main/res/layout/sceta_personaggio_fiabesco.xml
+++ b/app/src/main/res/layout/sceta_personaggio_fiabesco.xml
@@ -4,73 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#08f26e">
-
+    android:background="#08f26e"
+    tools:context=".SceltaPersonaggioFiabesco">
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="410dp"
+        android:layout_height="265dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/scenario_fiabesco"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/button"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/personaggio_fiabesco_1"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="71dp"
-        tools:layout_editor_absoluteY="40dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView5"
+        tools:ignore="MissingConstraints,UnknownId" />
 
     <ImageView
         android:id="@+id/button1"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="56dp"
         android:background="@drawable/personaggio_fiabesco_2"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="71dp"
-        tools:layout_editor_absoluteY="548dp" />
+        app:layout_constraintStart_toEndOf="@id/button"
+        app:layout_constraintTop_toTopOf="@id/button"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/button2"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/personaggio_fiabesco_3"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="257dp"
-        tools:layout_editor_absoluteY="548dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/button3"
         android:layout_width="87dp"
         android:layout_height="79dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/personaggio_fiabesco_4"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="10dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="250dp"
-        tools:layout_editor_absoluteY="40dp" />
-
-
+        app:layout_constraintStart_toEndOf="@id/button2"
+        app:layout_constraintTop_toTopOf="@id/button2"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
